Bug/error handling spotlight (#127)
* adding exception handling to loops

Added exception handling inside some loops to allow the method that processes spotlight batches to continue if a single batch fails for any reason.

* formatting